@@ -2496,8 +2496,7 @@ else // if staff login
 						extract($_SESSION['post_display']);
 						$form_type = 'login_submit';
 						form_check();
-						echo '<p>You entered:</p>' . display('html') . '<br><br>If the above information is correct, click <input type="submit" id="submit_continue" name="submit" value="continue" class="form_button">';
-						// echo '<input type="hidden" id="submit_continue_hidden" name="submit_hidden" value="continue">'; // this breaks "make changes" submit button below due to line added to top of inc_common.php for captcha v3 that makes submit_hidden = continue
+						echo '<p>You entered:</p>' . display('html') . '<br><br>If the above information is correct, click <input type="submit" id="submit_continue" name="submit" value="continue" class="form_button"><input type="hidden" id="submit_continue_hidden" name="submit_hidden" value="continue">';
 						if ($contact['email']) {echo '<input type="checkbox" id="send_action_mail" name="send_action_mail" value="Y" checked style="margin-left: 10px;"><label for="send_action_mail" id="label_send_action_mail">send mail?</label>';}
 						echo '<p>If you wish to make changes, please update the information below and hit the <b>submit</b> button.</p>';
 						form_insert_submission();
